# valuation

./: LICENSE  README.md  pyproject.toml
src/dateutil/: __init__.py  relativedelta.py
src/pydantic/: __init__.py
src/valuation_app/: main.py  sample_data.py  schemas.py
src/valuation_app/models/: capex.py  common.py  costs.py  funding.py  headcount.py  results.py  revenue.py  scenario.py  taxes.py  valuation.py  working_capital.py
src/valuation_app/services/: calculator.py
tests/: test_calculator.py
