[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valuation-app"
version = "0.1.0"
description = "Financial modeling and valuation engine for startups"
authors = [{name = "OpenAI", email = "support@openai.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "pydantic>=2.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dateutil>=2.8",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "Jinja2>=3.1"
]

[project.optional-dependencies]
reports = [
    "xlsxwriter>=3.1",
    "reportlab>=4.0",
    "python-pptx>=0.6"
]

dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
